kubernetes/my-deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
      - name: server-api
        image: christophemc/fraud_api:latest
        ports:
        - containerPort: 8000
          name: server-api
