kubernetes/my-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    name: server-api
  selector:
    app: deployment
