kubernetes/my-ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  defaultBackend:
    service:
      name: service
      port:
        number: 8000
